fix pdf on mobile

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -23,13 +23,22 @@ h6 {
   font-weight: normal;
   font-family: "EB Garamond", serif, sans-serif;
 }
-.pdfContainer{
-    height: 700px;
-    width: 100%;
-    font-family: arial;
-    font-size: 24px;
-    outline: dashed 1px black;
-    /* Center child horizontally*/
-    display: flex;
-    justify-content: center;
+
+/* For Mobile */
+@media screen and (max-width: 540px) {
+  .pdfContainer{
+      height: 700px;
+      width: 100vw;
+      overflow: scroll;
+  }
+}
+
+/* For others */
+@media screen and (min-width: 540px) {
+  .pdfContainer{
+      height: 700px;
+      /* Center child horizontally*/
+    margin-left: 120px;
+      justify-content: center;
+  }
 }
